--- a/react-app/src/components/MyPage/MyPageLayouts/myPageLayouts.css
+++ b/react-app/src/components/MyPage/MyPageLayouts/myPageLayouts.css
@@ -38,6 +38,7 @@
     height: 65%;
     border: 2px solid white;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+    background-color: rgba(209, 209, 209, 0.5);
 }
 
 .horizontal-section h1 {
