--- a/react-app/src/components/MyPage/LayoutSelector/layoutSelector.css
+++ b/react-app/src/components/MyPage/LayoutSelector/layoutSelector.css
@@ -22,6 +22,7 @@
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
     color: white;
     margin: 10px 0;
+    cursor: pointer;
 }
 
 .layout-button:hover {
@@ -37,5 +38,7 @@
     font-size: 20px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
     color: #6289bd;
+    border: 2px solid #6289bd;
     margin: 10px 0;
+    cursor: pointer;
 }
