--- a/react-app/src/components/MyPage/ColorSelector/colorSelector.css
+++ b/react-app/src/components/MyPage/ColorSelector/colorSelector.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    width: 100%;
+    width: 90%;
 }
 
 .standard {
@@ -44,4 +44,52 @@
     height: 100%;
     width: 50%;
     background-color: #a5943f;
+}
+
+.slider {
+    position: absolute;
+    top: 90%;
+    left: 11.5%;
+    width: 200px;
+    border-bottom: 8px solid #6289bd;
+    border-radius: 5px;
+}
+
+#slide-right {
+    position: absolute;
+    top: 90%;
+    left: 11.5%;
+    animation: outline-right 1s forwards;
+}
+
+@keyframes outline-right {
+    0% {
+        left:11.5%;
+    }
+    100% {
+        left: 24.7%;
+    }
+}
+
+#slide-left {
+    position: absolute;
+    top: 90%;
+    left: 11.5%;
+    animation: outline-left 1s forwards;
+}
+
+@keyframes outline-left {
+    0% {
+        left: 24.7%;
+    }
+    100% {
+        left:11.5%;
+    }
+}
+
+.slider-container {
+    height: 15px;
+    width: 82%;
+    background-color: rgba(255, 255, 255, .5);
+    border-radius: 10px;
 }
