--- a/react-app/src/components/MyPage/LayoutSelector/layoutSelector.css
+++ b/react-app/src/components/MyPage/LayoutSelector/layoutSelector.css
@@ -5,6 +5,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
+    margin-top: 3%;
 }
 
 .layout-section div {
@@ -13,32 +14,31 @@
 }
 
 .layout-button {
-    height: 40px;
-    width: 135px;
+    height: 50px;
+    width: 155px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border: none;
+    outline: none;
+    font-size: 20px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+    color: #6289bd;
+    margin: 15px 0;
+    cursor: pointer;
+}
+
+.layout-button:hover {
+    background-color: rgb(239, 241, 255);
+}
+
+.in-use {
+    height: 50px;
+    width: 155px;
     background-color: #6289bd;
     border: none;
     outline: none;
     font-size: 20px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
     color: white;
-    margin: 10px 0;
-    cursor: pointer;
-}
-
-.layout-button:hover {
-    background-color: #6d99d1;
-}
-
-.in-use {
-    height: 40px;
-    width: 135px;
-    background-color: rgb(245, 245, 245);
-    border: none;
-    outline: none;
-    font-size: 20px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-    color: #6289bd;
-    border: 2px solid #6289bd;
-    margin: 10px 0;
+    margin: 15px 0;
     cursor: pointer;
 }
