--- a/react-app/src/components/MyPage/PreviewContainer/previewContainer.css
+++ b/react-app/src/components/MyPage/PreviewContainer/previewContainer.css
@@ -1,6 +1,8 @@
 .preview-background {
     height: 100%;
     width: 100%;
+    background-position: center;
+    background-size: cover;
     z-index: -1;
 }
 
@@ -13,15 +15,4 @@
     height: 100%;
     font-size: 25px;
     color: rgba(0, 0, 0, 0.7);
-}
-
-.preview-layout {
-    position: relative;
-    top: -100%;
-    left: 50%;
-    color: white;
-    font-size: 50px;
-    z-index: 1;
-    width: 50px;
-    height: 50px;
 }
