--- a/react-app/src/components/Layouts/PreviewLayouts/TopNavPreview/topNavPreview.css
+++ b/react-app/src/components/Layouts/PreviewLayouts/TopNavPreview/topNavPreview.css
@@ -15,9 +15,17 @@
     margin: 25px 0;
 }
 
-#preview-underline {
+.preview-button-name {
+    background-color: transparent;
+    border: transparent;
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    letter-spacing: .2rem;
+    margin: 20px 0;
+    color: rgba(0, 0, 0, .6);
     border-bottom: 2px solid rgba(0, 0, 0, .6);
 }
+
 
 .preview-button {
     background-color: transparent;
@@ -65,10 +73,14 @@
 }
 
 .invitation-preview {
-    margin: 15px 0;
+    margin: 20px 0;
     display: flex;
     align-items: center;
     text-align: center;
     font-size: 18px;
     color: rgba(0, 0, 0, .8);
+}
+
+#standard-one {
+    color: rgba(246, 247, 236, 0.9);
 }
