--- a/react-app/src/components/Templates/templates.css
+++ b/react-app/src/components/Templates/templates.css
@@ -48,6 +48,7 @@ section {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    padding: 0;
 }
 
 .carousel-root {
