--- a/react-app/src/components/Layouts/PreviewLayouts/TopNavPreview/topNavPreview.css
+++ b/react-app/src/components/Layouts/PreviewLayouts/TopNavPreview/topNavPreview.css
@@ -65,6 +65,7 @@
     text-transform: uppercase;
     font-size: 1.5rem;
     letter-spacing: .1rem;
+    color: rgba(0, 0, 0, .7);
 }
 
 .vertical-line-preview {
