--- a/react-app/src/components/Layouts/PreviewLayouts/TopNavPreview/topNavPreview.css
+++ b/react-app/src/components/Layouts/PreviewLayouts/TopNavPreview/topNavPreview.css
@@ -26,7 +26,6 @@
     border-bottom: 2px solid rgba(0, 0, 0, .6);
 }
 
-
 .preview-button {
     background-color: transparent;
     border: transparent;
@@ -84,4 +83,44 @@
 
 #standard-one {
     color: rgba(246, 247, 236, 0.9);
+}
+
+#primary-one {
+    color: #0f6eea;
+}
+
+#secondary-one {
+    color: #e08d56;
+}
+
+#primary-two {
+    color: #0f6eea;
+}
+
+#secondary-two {
+    color: #6e7b7f;
+}
+
+#primary-three {
+    color: #5b6c34;
+}
+
+#secondary-three {
+    color: #a5943f;
+}
+
+#primary-four {
+    color: #00b7cc;
+}
+
+#secondary-four {
+    color: #ffaca4;
+}
+
+#primary-five {
+    color: #17a5a3;
+}
+
+#secondary-five {
+    color: #e97324;
 }
