added different colors

--- a/react-app/src/components/Layouts/PreviewLayouts/TopNavPreview/topNavPreview.css
+++ b/react-app/src/components/Layouts/PreviewLayouts/TopNavPreview/topNavPreview.css
@@ -114,7 +114,7 @@
 }
 
 #secondary-four {
-    color: #ffaca4;
+    color: #977173;
 }
 
 #primary-five {
@@ -122,5 +122,5 @@
 }
 
 #secondary-five {
-    color: #e97324;
+    color: #f67824;
 }
