--- a/react-app/src/components/MyPage/ColorSelector/colorSelector.css
+++ b/react-app/src/components/MyPage/ColorSelector/colorSelector.css
@@ -73,7 +73,7 @@
 }
 
 #four-c2 {
-    background-color: #ffd0cc;
+    background-color: #977173;
 }
 
 #five-c1 {
@@ -81,7 +81,7 @@
 }
 
 #five-c2 {
-    background-color: #e97324;
+    background-color: #f67824;
 }
 
 .outline-slider {
