--- a/react-app/src/components/Layouts/PreviewLayouts/TopNavPreview/topNavPreview.css
+++ b/react-app/src/components/Layouts/PreviewLayouts/TopNavPreview/topNavPreview.css
@@ -25,6 +25,10 @@
     border-bottom: 2px solid rgba(246, 247, 236, 0.9);
 }
 
+#basic-black-transparent {
+    border-bottom: 2px solid rgba(0, 0, 0, .6);
+}
+
 .preview-button {
     background-color: transparent;
     border: transparent;
