--- a/react-app/src/components/LoadingPageModal/loadingPageModal.css
+++ b/react-app/src/components/LoadingPageModal/loadingPageModal.css
@@ -62,3 +62,69 @@
     height: 100%;
     width: 100%;
 }
+
+.my-site {
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    width: 100%;
+}
+
+.expand {
+    margin-top: 15%;
+    width: 20%;
+    height: 20%;
+    animation: load-page 2s forwards;
+}
+
+@keyframes load-page {
+    0% {
+        width: 0%;
+        height: 0%;
+        border-radius: 0%;
+        margin-top: 18.5%;
+    }
+    35% {
+        width: 15%;
+        height: 15%;
+        margin-top: 16.2%;
+    }
+    70% {
+        width: 5%;
+        height: 5%;
+        margin-top: 18.5%;
+    }
+    100% {
+        width: 100%;
+        height: 100%;
+        margin-top: 0;
+    }
+}
+
+#contract {
+    animation: minimize 2s forwards;
+}
+
+@keyframes minimize {
+    0% {
+        width: 100%;
+        height: 100%;
+        margin-top: 0;
+    }
+    35% {
+        width: 65%;
+        height: 65%;
+        margin-top: 8%;
+    }
+    70% {
+        width: 90%;
+        height: 90%;
+        margin-top: 2%;
+    }
+    100% {
+        width: 0%;
+        height: 0%;
+        border-radius: 0%;
+        margin-top: 19.5%;
+    }
+}
