--- a/react-app/src/components/MyPage/MyPageLayout/myPageLayout.css
+++ b/react-app/src/components/MyPage/MyPageLayout/myPageLayout.css
@@ -81,7 +81,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     width: 80%;
 }
 
