--- a/react-app/src/components/Layouts/SiteLayouts/TopNav/topNav.css
+++ b/react-app/src/components/Layouts/SiteLayouts/TopNav/topNav.css
@@ -7,65 +7,77 @@
 
 .site-tabs {
     height: 50px;
-    width: 70%;
+    width: 49.6%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    margin: 20px 0;
+    margin-top: 8%;
+    padding: 20px 0;
+    background-color: rgba(255, 255, 255, 0.6);
+    border-top: 4px solid rgb(254, 255, 238);
+    border-left: 4px solid rgb(254, 255, 238);
+    border-right: 4px solid rgb(254, 255, 238);
 }
+
 
 .site-button {
     background-color: transparent;
     border: transparent;
     text-transform: uppercase;
-    font-size: 1.2rem;
+    font-size: 2rem;
     letter-spacing: .2rem;
-    margin: 20px 0;
     color: rgba(0, 0, 0, .6);
 }
 
 .site-card {
     background-color: rgba(246, 247, 236, 0.9);
-    height: 400px;
-    width: 350px;
+    height: 500px;
+    width: 50%;
     box-shadow: 4px 4px 3px rgba(0, 0, 0, .1);
     display: flex;
     align-items: center;
-    flex-direction: column;
+    justify-content: space-evenly;
+    flex-direction: row;
 }
 
 .top-half-site {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-bottom: 2px solid rgba(0, 0, 0, .4);
+}
+
+.bot-half-site {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .profile-image-site {
-    height: 125px;
-    width: 125px;
+    height: 300px;
+    width: 300px;
     margin: 20px 0;
     border-radius: 50%;
 }
 
 .couple-names-site {
     text-transform: uppercase;
-    font-size: 1.5rem;
+    font-size: 2.2rem;
     letter-spacing: .1rem;
     color: rgba(0, 0, 0, .7);
+    border-bottom: 2px solid rgba(0, 0, 0, .4);
 }
 
 .vertical-line-site {
-    height: 50px;
-    border-left: 2px solid rgba(0, 0, 0, .4);
+    height: 80px;
+    border-left: 3px solid rgba(0, 0, 0, .4);
 }
 
 .invitation-site {
-    margin: 20px 0;
+    margin: 25px 0;
     display: flex;
     align-items: center;
     text-align: center;
-    font-size: 18px;
+    font-size: 30px;
     color: rgba(0, 0, 0, .8);
 }
