--- a/react-app/src/components/Layouts/PreviewLayouts/BottomNavPreview/bottomNavPreview.css
+++ b/react-app/src/components/Layouts/PreviewLayouts/BottomNavPreview/bottomNavPreview.css
@@ -1,20 +1,24 @@
 .preview-tabs-bot {
     height: 50px;
-    width: 70%;
+    width: 546px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    margin-top: 20px;
+    background-color: rgba(255, 255, 255, 0.7);
+    border-bottom: 2px solid rgba(246, 247, 236, 0.9);
+    border-left: 2px solid rgba(246, 247, 236, 0.9);
+    border-right: 2px solid rgba(246, 247, 236, 0.9);
 }
 
 .card-preview-bot {
     background-color: rgba(246, 247, 236, 0.9);
-    height: 400px;
-    width: 350px;
+    height: 300px;
+    width: 550px;
     box-shadow: 4px 4px 3px rgba(0, 0, 0, .1);
     display: flex;
     align-items: center;
-    flex-direction: column;
-    margin-top: 50px;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-top: 10%;
 }
