--- a/react-app/src/components/Layouts/PreviewLayouts/TopNavPreview/topNavPreview.css
+++ b/react-app/src/components/Layouts/PreviewLayouts/TopNavPreview/topNavPreview.css
@@ -32,7 +32,7 @@
     background-color: transparent;
     border: transparent;
     text-transform: uppercase;
-    font-size: 1rem;
+    font-size: 1.4rem;
     letter-spacing: .2rem;
     margin: 20px 0;
     color: rgba(0, 0, 0, .6);
@@ -59,6 +59,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 25px;
 }
 
 .profile-image-preview {
