--- a/react-app/src/components/SplashPage/splashPage.css
+++ b/react-app/src/components/SplashPage/splashPage.css
@@ -26,3 +26,29 @@
     color: white;
     margin-bottom: 30px;
 }
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 15%;
+    height: 9vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.footer button {
+    background-color: transparent;
+    outline: none;
+    border: none;
+}
+
+.foot-but {
+    font-size: 35px;
+    color:#0f6eea;
+}
+
+.foot-but:hover {
+    color: #6289bd;
+}
