--- a/react-app/src/components/MyPage/LayoutSelector/layoutSelector.css
+++ b/react-app/src/components/MyPage/LayoutSelector/layoutSelector.css
@@ -14,6 +14,8 @@
 }
 
 .layout-button {
+    position: relative;
+    display: inline-block;
     height: 50px;
     width: 155px;
     background-color: rgba(255, 255, 255, 0.5);
@@ -45,4 +47,39 @@
 
 #not-allowed {
     cursor: not-allowed;
+}
+
+#not-allowed .text {
+    visibility: hidden;
+    width: 140px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 130%;
+    left: 50%;
+    margin-left: -70px;
+    font-size: 15px;
+}
+
+#not-allowed .text::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: black transparent transparent transparent;
+}
+
+#not-allowed:hover .text {
+    visibility: visible;
+}
+
+#hide-tool {
+    display: none;
 }
