--- a/react-app/src/components/FullPreview/fullPreview.css
+++ b/react-app/src/components/FullPreview/fullPreview.css
@@ -1,6 +1,6 @@
 .layout-in {
     opacity: 1;
-    animation: fade .5s linear;
+    animation: fade .3s linear;
 }
 
 @keyframes fade {
@@ -45,7 +45,7 @@
     margin-top: 15%;
     width: 10%;
     height: 10%;
-    animation: load-page 2s forwards;
+    animation: load-page 1s forwards;
 }
 
 @keyframes load-page {
@@ -54,7 +54,7 @@
         height: 15%;
         margin-top: 18.5%;
     }
-    25% {
+    /* 25% {
         width: 15%;
         height: 25%;
         margin-top: 16.2%;
@@ -63,7 +63,7 @@
         width: 5%;
         height: 10%;
         margin-top: 18.5%;
-    }
+    } */
     100% {
         width: 100%;
         height: 100%;
@@ -95,7 +95,7 @@
     background-position: center;
     background-size: cover;
     z-index: -1;
-    animation: bounce-in 2s forwards;
+    animation: bounce-in .5s forwards;
 }
 
 @keyframes bounce-in {
@@ -105,9 +105,6 @@
     }
     75% {
         border-radius: 50%;
-        border: 2px solid white;
-    }
-    90% {
         border: 2px solid white;
     }
     100% {
