--- a/react-app/src/components/FullPreview/fullPreview.css
+++ b/react-app/src/components/FullPreview/fullPreview.css
@@ -45,25 +45,15 @@
     margin-top: 15%;
     width: 10%;
     height: 10%;
-    animation: load-page 1s forwards;
+    animation: load-page .9s forwards;
 }
 
 @keyframes load-page {
     0% {
-        width: 10%;
-        height: 15%;
+        width: 1%;
+        height: 2%;
         margin-top: 18.5%;
     }
-    /* 25% {
-        width: 15%;
-        height: 25%;
-        margin-top: 16.2%;
-    }
-    60% {
-        width: 5%;
-        height: 10%;
-        margin-top: 18.5%;
-    } */
     100% {
         width: 100%;
         height: 100%;
@@ -80,11 +70,21 @@
         width: 100%;
         height: 100%;
         margin-top: 0;
+        margin-left: 0;
+        border-radius: 0%;
+        border: none;
+    }
+    35% {
+        border-radius: 20%;
+        border: 2px solid white;
     }
     100% {
         width: 0%;
         height: 0%;
-        margin-top: 20%;
+        border-radius: 30%;
+        margin-top: 19%;
+        margin-left: 50%;
+        border: 2px solid white;
     }
 }
 
@@ -95,20 +95,22 @@
     background-position: center;
     background-size: cover;
     z-index: -1;
-    animation: bounce-in .5s forwards;
+    animation: bounce-in .9s forwards;
 }
 
 @keyframes bounce-in {
     0% {
         border: 2px solid white;
-        border-radius: 50%;
+        border-radius: 20%;
     }
-    75% {
-        border-radius: 50%;
+    65% {
+        border-radius: 20%;
+        border: 2px solid white;
+    }
+    85% {
         border: 2px solid white;
     }
     100% {
         border-radius: 0%;
-        border: none;
     }
 }
