--- a/react-app/src/components/Layouts/PreviewLayouts/LeftNavPreview/leftNavPreview.css
+++ b/react-app/src/components/Layouts/PreviewLayouts/LeftNavPreview/leftNavPreview.css
@@ -32,3 +32,10 @@
     margin-top: 75px;
 
 }
+
+.profile-image-preview-sides {
+    height: 150px;
+    width: 190px;
+    margin: 20px 0;
+    border-radius: 10%;
+}
