--- a/react-app/src/components/Templates/BackgroundImageCarousel/backImg.css
+++ b/react-app/src/components/Templates/BackgroundImageCarousel/backImg.css
@@ -1,5 +1,15 @@
 .carousel-container {
-    width: 90%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: 5px 0;
+}
+
+.my-images-tem {
+    width: 65%;
     display: flex;
     flex-direction: row;
     align-items: center;
