--- a/react-app/src/components/SplashPage/splashPage.css
+++ b/react-app/src/components/SplashPage/splashPage.css
@@ -53,24 +53,99 @@
     color: #6289bd;
 }
 
-.searchBar {
-    background-color:rgb(223, 223, 223);
+.searchPage {
+    background-color:rgb(209, 209, 209, .8);
     border-bottom: 2px solid black;
-    height: 470px;
-    width: 725px;
+    height: 460px;
+    width: 723px;
     position: absolute;
-    top: 30%;
-    right: 337px;
+    top: 31%;
+    right: 338px;
     z-index: -1;
+    animation: fadeIn 1s;
+}
+
+.searchBar {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.searchBar input {
+    height: 60px;
+    width: 200px;
+    font-size: 20px;
+    padding-left: 20px;
+}
+
+.slide-ani {
+    animation: slide-input 1s forwards;
+}
+
+@keyframes slide-input {
+    0%{
+        width: 200px;
+    }
+    100% {
+        width: 455px;
+    }
+}
+
+#slide-ani-in {
+    animation: slide-input-in 1s forwards;
+}
+
+@keyframes slide-input-in {
+    0%{
+        width: 455px;
+    }
+    100% {
+        width: 200px;
+    }
 }
 
 .searchIcon {
     color: rgba(0, 0, 0, .7);
     font-size: 25px;
-    margin-left: 38px;
-    margin-top: 35px;
+    position: absolute;
+    top: 27px;
+    left: 420px;
 }
 
+.icon-slider {
+    color: rgba(0, 0, 0, .7);
+    font-size: 25px;
+    position: absolute;
+    top: 27px;
+    left: 420px;
+    animation: icon-slide 1s forwards;
+}
+
+@keyframes icon-slide {
+    0% {
+        left: 420px;
+    }
+    100% {
+        left: 555px;
+    }
+}
+
+#slide-icon-in {
+    animation: icon-slide-in 1s forwards;
+}
+
+@keyframes icon-slide-in {
+    0% {
+        left: 555px;
+    }
+    100% {
+        left: 420px;
+    }
+}
+/*
 .circle {
     width: 50px;
     height: 50px;
@@ -93,7 +168,7 @@
     border-radius: 40%;
     animation: fill 7s ease-in-out forwards;
     z-index: -1;
-}
+} */
 
 @keyframes fill {
     from {
