--- a/react-app/src/components/Layouts/SiteLayouts/TopNav/topNav.css
+++ b/react-app/src/components/Layouts/SiteLayouts/TopNav/topNav.css
@@ -29,6 +29,56 @@
     color: rgba(0, 0, 0, .6);
 }
 
+.one-active {
+    background-color: transparent;
+    border: transparent;
+    text-transform: uppercase;
+    font-size: 2rem;
+    letter-spacing: .2rem;
+    color: #0f6eea;
+    border-bottom: 2px solid #e08d56;
+}
+
+.two-active {
+    background-color: transparent;
+    border: transparent;
+    text-transform: uppercase;
+    font-size: 2rem;
+    letter-spacing: .2rem;
+    color: #0f6eea;
+    border-bottom: 2px solid #6e7b7f;
+}
+
+.three-active {
+    background-color: transparent;
+    border: transparent;
+    text-transform: uppercase;
+    font-size: 2rem;
+    letter-spacing: .2rem;
+    color: #5b6c34;
+    border-bottom: 2px solid #a5943f;
+}
+
+.four-active {
+    background-color: transparent;
+    border: transparent;
+    text-transform: uppercase;
+    font-size: 2rem;
+    letter-spacing: .2rem;
+    color: #00b7cc;
+    border-bottom: 2px solid #977173;
+}
+
+.five-active {
+    background-color: transparent;
+    border: transparent;
+    text-transform: uppercase;
+    font-size: 2rem;
+    letter-spacing: .2rem;
+    color: #17a5a3;
+    border-bottom: 2px solid #f67824;
+}
+
 .site-card {
     background-color: rgba(246, 247, 236);
     height: 500px;
@@ -92,11 +142,88 @@
 }
 
 .venue-map {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
     animation: fadeIn 1s;
+    width: 100%;
+    height: 100%;
 }
 
 .map-link {
     color: black;
     font-size: 20px;
     text-decoration: none;
+}
+
+.venue-location {
+
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    height: 80%;
+    /* align-items: flex-start; */
+    /* justify-content:start; */
+}
+
+.venue-name-g {
+    font-size: 30px;
+    color: rgba(0, 0, 0, .8);
+    border-bottom: 1px solid rgba(0, 0, 0, .8);
+    margin-bottom: 30px;
+
+}
+
+
+.venue-address-g {
+    font-size: 25px;
+    color: rgba(0, 0, 0, .8);
+
+}
+
+.directions-button {
+    margin-top: 30px;
+    text-align: center;
+    height: 30px;
+    width: 150px;
+    text-decoration: none;
+    border: 2px solid rgba(0, 0, 0, .8);
+    background:rgba(218, 218, 218, 0.6);
+    color: black;
+    font-size: 20px;
+    padding-top: 5px;
+    /* box-shadow: 1px 1px 3px rgba(0, 0, 0, .6); */
+    transition: .25s all ease-in-out;
+}
+
+.directions-button:hover {
+    transform: translateX(3px);
+}
+
+#b-1 {
+    background-color: #0f6eea;
+    border: 2px solid #e08d56;
+    color: white;
+}
+#b-2 {
+    color: white;
+    background-color: #0f6eea;;
+    border: 2px solid #6e7b7f;
+}
+#b-3 {
+    color: white;
+    background-color:#5b6c34;
+    border: 2px solid #a5943f;
+}
+#b-4 {
+    background-color: #00b7cc;
+    border: 2px solid #977173;
+    color: white;
+}
+
+#b-5 {
+    background: #17a5a3;
+    border: 2px solid #f67824;
+    color: white;
 }
