--- a/react-app/src/components/Layouts/SiteLayouts/TopNav/topNav.css
+++ b/react-app/src/components/Layouts/SiteLayouts/TopNav/topNav.css
@@ -227,3 +227,43 @@
     border: 2px solid #f67824;
     color: white;
 }
+
+.small-footer {
+    position: absolute;
+    bottom: 0;
+    left: 45%;
+    background-color: rgba(255, 255, 255, 0.5);
+    border: 2px solid white;
+    width: 200px;
+    padding: 5px 0;
+    text-align: center;
+    color:rgba(0, 0, 0, .6);
+}
+
+.bloom-logo {
+    display: inline;
+    cursor: pointer;
+}
+
+
+#f-1 {
+    color: #0f6eea;
+    border-bottom: 1px solid #e08d56;
+}
+#f-2 {
+    color: #0f6eea;;
+    border-bottom: 1px solid #6e7b7f;
+}
+#f-3 {
+    color:#5b6c34;
+    border-bottom: 1px solid #a5943f;
+}
+#f-4 {
+    color: #00b7cc;
+    border-bottom: 1px solid #977173;
+}
+
+#f-5 {
+    color: #17a5a3;
+    border-bottom: 1px solid #f67824;
+}
